# IndividualProject

./: CMakeLists.txt  IndividualProject  Richard Came– CE301 personal logbook.docx  Timer.cpp  Timer.h  bugs and to do list.txt  logbook.txt  main.cpp
Code/: Update.cpp  Update.h
Code/Characters/: Character.cpp  Character.h  EnemyCharacter.cpp  EnemyCharacter.h  PlayerCharacter.cpp  PlayerCharacter.h
Code/Characters/Enemies/: Blob.cpp  Blob.h  Slime.cpp  Slime.h
Code/UI/: Quest.cpp  Quest.h  currentQuests.cpp  currentQuests.h  drawText.cpp  drawText.h  drawTextBox.cpp  drawTextBox.h  healthBar.cpp  healthBar.h  loseScreen.cpp  loseScreen.h  renderPlayerStatBar.cpp  renderPlayerStatBar.h  winScreen.cpp  winScreen.h
Code/media/: Texture.cpp  Texture.h  TextureInfo.cpp  TextureInfo.h  TileInfo.cpp  TileInfo.h  fonts.cpp  fonts.h  loadMedia.cpp  loadMedia.h  textures.cpp  textures.h
Code/terrain/: Background.cpp  Background.h  PerlinNoise.cpp  PerlinNoise.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainNode.cpp  TerrainNode.h
Code/utilities/: AStarSearch.cpp  AStarSearch.h  Background.cpp  Background.h  PerlinNoise.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainNode.h  Timer.cpp  Timer.h  Update.cpp  Update.h  constants.h  functions.cpp  functions.h  globals.cpp  globals.h  loadMedia.h  random.cpp  random.h  textures.h
Text Documents/: C++ Role Playing Game.pptx  Final Report.docx  Richard Came– CE301 personal logbook.docx  Richard.Came.CE301.personal.logbook.docx
Text Documents/Open Day/: Abstract.docx  Open Day Poster.pptx
cmake/: FindSDL2.cmake  FindSDL2_Image.cmake  FindSDL2_ttf.cmake
test/: Search.cpp  Search.h
utilities/: Background.cpp  Background.h  Dot.cpp  Dot.h  PlayerCharacter.cpp  PlayerCharacter.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainNode.cpp  TerrainNode.h  Texture.cpp  Texture.h  TextureInfo.cpp  TextureInfo.h  Timer.cpp  Timer.h  Update.cpp  Update.h  constants.h  functions.cpp  functions.h  globals.cpp  loadMedia.cpp  textures.cpp  textures.h
